# htr-quality-classifier

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_NL_OPENTAAL.txt  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  markdown-link-check.yml  next_steps.yml  publish-to-test-pypi.yml  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: lm.ipynb  quality.ipynb
scripts/: classify.py  classify_text_quality.py  text_quality.py
tests/: conftest.py  test_my_module.py
tests/classifier/: test_pipeline.py
tests/feature/: test_featurizer.py  test_tokenizer.py
tests/feature/scorer/: test_dictionary.py  test_garbage.py  test_q_gram.py
tests/language/: test_classifier.py
text_quality/: __init__.py  my_module.py  settings.py
text_quality/classifier/: classifier.py  pipeline.py  settings.py
text_quality/data/classifier/: pipeline_nn.joblib
text_quality/data/dicts/: nl_voc.txt
text_quality/feature/: __init__.py  dictionary.py  featurize.py  garbage.py  q_gram.py  tokenizer.py
text_quality/feature/scorer/: dictionary.py  garbage.py  q_gram.py  scorer.py
text_quality/language/: classifier.py  fasttext.py
text_quality/page/: page.py
