[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "internet_access: mark test that requires internet access",
]

[tool.coverage.run]
branch = true
source = ["text_quality"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311
skip_missing_interpreters = true

[testenv]
commands = pytest
extras = dev
"""
