# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Carsten Schnober
author_email = c.schnober@esciencecenter.nl
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = A package to determine the quality of a a digitized text, from a handwritten script or scanned print (HTR/OCR output).
keywords =
    htr
    ocr
long_description = file: README.md
long_description_content_type = text/markdown
name = text_quality
project_urls =
    Bug Tracker = https://github.com/laHTeR/htr-quality-classifier/issues
url = https://github.com/laHTeR/htr-quality-classifier
version = 0.2.2

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires = 
    fasttext-wheel~=0.9.2
    joblib==1.2.0
    pandas==1.5.3
    pagexml-tools==0.3.3
    scikit-learn==1.2.1
    spylls==0.1.7
    tqdm==4.65.0
    openpyxl~=3.1.2
scripts =
    scripts/classify_text_quality.py

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.package_data]
text_quality = data/**/*

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = text_quality, text_quality.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = text_quality
src_paths = text_quality,tests
line_length = 120
